<resources>
    <string name="app_name">MVVM example</string>
    <string name="km2">Km2</string>
    <string name="area">Area</string>
    <string name="deuxPoints">:</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string-array name="continents">
        <item>Select a continent</item>
        <item>Asia </item>
        <item>Africa</item>
        <item>America</item>
        <item>Europe</item>

    </string-array>
</resources>
