<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="countryVm"
            type="com.gannouni.nizar.recyclerWithMVVM.Model.Country" />

    </data>

    <android.support.v7.widget.CardView


        android:id="@+id/titre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp">

        <android.support.constraint.ConstraintLayout


            android:id="@+id/const1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/areaCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:text="@{String.valueOf(countryVm.areaCountry)}"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                tools:text="area" />

            <TextView
                android:id="@+id/labelCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{countryVm.labelCountry}"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                tools:text="label" />

            <TextView
                android:id="@+id/capitalCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{countryVm.capitalCountry}"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                tools:text="capital" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/km2"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/areaCountry"
                app:layout_constraintTop_toTopOf="@+id/areaCountry" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/area"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/deuxPoints"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/capital"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deuxPoints"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/area"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deuxPoints"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/population"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deuxPoints"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(countryVm.population)}"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/areaCountry"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:text="population" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>
